# FlaskAppExample

./: README.md
client/: bun.lockb  package.json
client/src/: App.jsx
client/src/api/auth/: firebase.js
server/: post_memos.sh  pyproject.toml
server/src/: app.py
server/src/db/: memos.json
server/src/memos/: get_memo.py  save_memo.py
server/src/server/: __init__.py
server/src/util/: constant.py  verify.py
