[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "itochs", email = "halglobe0108@gmail.com" }
]
dependencies = [
    "flask>=3.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
